更新网站代码

--- a/index.html
+++ b/index.html
@@ -242,11 +242,16 @@
                     
                     <h3><i class="fas fa-tachometer-alt"></i> 会员等级说明</h3>
                     <ul>
-                        <li><strong>普通会员</strong>：基础下载速度 (1x)</li>
-                        <li><strong>高级会员</strong>：2倍下载速度 (2x)</li>
-                        <li><strong>VIP会员</strong>：5倍下载速度 (5x)</li>
-                        <li><strong>超级VIP</strong>：10倍下载速度 (10x)</li>
-                        <li><strong>钻石会员</strong>：10倍下载速度 (10x) + 专属特权</li>
+                        <li><strong>会员level1</strong>：基础下载速度 (1x)</li>
+                        <li><strong>会员level2</strong>：2倍下载速度 (2x)</li>
+                        <li><strong>会员level3</strong>：2倍下载速度 (2x) + 10GB云存储空间</li>
+                        <li><strong>会员level4</strong>：5倍下载速度 (5x) + 50GB云存储空间 + 优先客服</li>
+                        <li><strong>会员level5</strong>：5倍下载速度 (5x) + 100GB云存储空间 + 优先客服 + 无广告体验</li>
+                        <li><strong>会员level6</strong>：10倍下载速度 (10x) + 200GB云存储空间 + 优先客服 + 无广告体验 + AI助手基础版</li>
+                        <li><strong>会员level7</strong>：10倍下载速度 (10x) + 300GB云存储空间 + 专属客服 + 无广告体验 + AI助手高级版</li>
+                        <li><strong>会员level8</strong>：10倍下载速度 (10x) + 500GB云存储空间 + 专属客服 + 无广告体验 + AI助手高级版 + 专属资源</li>
+                        <li><strong>会员level9</strong>：10倍下载速度 (10x) + 1TB云存储空间 + 专属客服 + 无广告体验 + AI助手高级版 + 专属资源 + 线下活动</li>
+                        <li><strong>会员level10</strong>：10倍下载速度 (10x) + 2TB云存储空间 + 专属客服 + 无广告体验 + AI助手高级版 + 专属资源 + 线下活动 + 定制服务</li>
                     </ul>
                 </div>
             </div>
