修复工具功能：解决工具类实例化时的作用域访问错误

--- a/index.html
+++ b/index.html
@@ -663,5 +663,12 @@
             </div>
         </div>
     </footer>
+    
+    <!-- 工具组件脚本 -->
+        <script src="js/components/TextToSpeech.js"></script>
+        <script src="js/components/Calculator.js"></script>
+        <script src="js/components/UnitConverter.js"></script>
+        <script src="js/components/PasswordGenerator.js"></script>
+        <script src="js/components/AgeCalculator.js"></script>
 </body>
 </html>
